<resources>
    <string name="app_name">Gossamer</string>

    <!-- Login Fragment Strings -->
    <string name="email_hint">Enter your email</string>
    <string name="pwd_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="create_account">Create Account</string>

    <!-- Register Fragment Strings -->
    <string name="username_text">Enter a display name</string>
    <string name="new_pwd_text">Enter a password</string>
    <string name="pwd_length_hint">Password must be longer than 6 characters</string>
    <string name="register_welcome_message">Welcome to Gossamer</string>
    <string name="registration_button">Register</string>
    <string name="confirm_pwd_text">Confirm password</string>


    <!-- Shared Preferences Strings -->
    <string name="LOGIN_PREFS">edu.tacoma.uw.gossamer_client_android.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="EMAIL">email</string>
    <string name="isAdmin">isAdmin</string>

    <!-- Strings for the Menu -->
    <string name="action_logout">Sign Out</string>


    <!-- Strings for the home view -->
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>

    <!-- Strings for Add Post Fragment -->
    <string name="add_post_button">Post</string>
    <string name="anon_toggle_switch">Anonymous</string>
    <string name="share_your_story">Share your story...</string>
    <string name="share_your_comment">"Add a comment</string>
    <string name="add_tags">Add Tags</string>
    <string name="add_url">Enter URL to add an image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tags">Tags</string>

    <string name="learn_more">Learn More</string>
    <string name="share_post">Share Post</string>
    <string name="search">Search</string>
    <string name="view_profile">View Profile</string>
    <string name="learn_about">Learn about:</string>
    <string name="gossamer_logo">Gossamer logo</string>
    <string name="user_uploaded_image">User-uploaded image.</string>
    <string name="chat">Chat</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>


</resources>